name:               henk2000
version:            0.0
stability:          Experimental
build-type:         Simple
cabal-version:      >=1.14


library
    default-language:   Haskell2010
    ghc-options:        -Wall
    build-depends:
        base >=4.6,
        pretty,
        parsec
    hs-source-dirs:     src
    exposed-modules:
        Classification,
        HenkAS,
        HenkInt,
        HenkParser,
        HenkPP,
        HenkTC,
        HenkTI,
        ParseError,
        TermSupport,
        TypeSystems


executable Henk2000
    default-language:   Haskell2010
    ghc-options:        -Wall
    build-depends:
        base >=4.6,
        parsec,
        henk2000
    hs-source-dirs:     main
    main-is:            Main.hs

